# kartapple-gl

./: .gitignore  Cargo.toml  README.md
res/: frag.glsl  vert.glsl
shaders/: frag.glsl  vert.glsl
src/: core.rs  lib.rs  util.rs
src/core/: application.rs  attribute.rs  camera.rs  gl_var_type.rs  handlers.rs  index.rs  key_handle.rs  kukari_app.rs  scaffold.rs  uniform.rs  window.rs
src/core/handlers/: mouse_handler.rs
src/kart_graph/: core.rs
src/kart_graph/core/: attribute.rs  camera.rs  index.rs  kart_application.rs  uniform.rs  window.rs
src/kart_graph/util/: program_utils.rs  shader_utils.rs
src/util/: program_utils.rs  shader_utils.rs
