[package]
name = "kart-apple-gl"
version = "0.4.2"
edition = "2021"
authors = ["Carter"]
description = "a graphics engine using gl, glfw, and cgmath (kart-graphics-engine > KartApple-GL > kartapple-gl"
license = "MIT"
repository = "https://github.com/Carter907/kartapple-gl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.52.0"
gl = "0.14.0"
cgmath = "0.18.0"
